# world_model

./: .gitignore  README.md  pyproject.toml
billiard/: README.md  main.py
billiard/billard_wm/: config.py  main.py  physics.py  renderer.py  world_model.py
pico_jepa/: README.md  config.py  main.py  pendulum_jepa.py
pico_marble/: README.md  config.py  dataset.py  demo.py  main.py  model.py  renderer2d.py  renderer3d.py  scene.py  train.py
ressources/: craik-chapitre5-traduction.md
