[project]
name = "world-model-demos"
version = "0.1.0"
description = "A collection of pedagogical demos illustrating World Model concepts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pygame-ce>=2.5.7",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
]
